2006-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_krovak.c: Removed MessageBox() DEBUG stuff.

2006-03-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Return error -14 (latitude or longitude
	exceeds bounds) for failed geodetic to geocentric (lat out of +-90).

2006-03-10  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: updated to EPSG 6.9.

2006-02-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Treat errno=33 (EDOM) and errno=34 (ERANGE)
	as transient errors, and continue trying to transform the rest of
	the points.

2006-01-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/world: Fixed definition of <irish> as per:
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1041

2006-01-12  Frank Warmerdam  <warmerdam@pobox.com>

	* geocent.c: Make global variables static. Amoung other things
	this avoids conflicts for apps that link in geotrans.

2005-12-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: improve code with some symbolic names.

2005-11-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: Added OSGB36 transformation to list.

2005-07-06  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: added .gsb installation logic to capture nz file.

	* pj_gridinfo.c: fixed debug format string per:
	http://bugzilla.remotesensing.org/show_bug.cgi?id=886

	* pj_utils.c: fixed precision of es encoding in pj_latlong_from_proj.
	  http://bugzilla.remotesensing.org/show_bug.cgi?id=881

2005-04-20  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_apply_gridshift.c: Fixed problem that was resulted in points
	after the first apparently succeeding to shift when a gridshift
	file wasn't found.  Bug 834.

2004-11-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Fixed pj_geocentric_to_geodetic() to not try 
	and process HUGE_VAL values (those that have failed some previous 
	transform step).  Related to bug:
	  http://bugzilla.remotesensing.org/show_bug.cgi?id=642
