@@ -2,9 +2,9 @@
 #ifndef lint
 static const char SCCSID[]="@(#)p_series.c	4.6	95/08/19	GIE	REL";
 #endif
+#include "projects.h"
 #include <stdio.h>
 #include <string.h>
-#include <projects.h>
 #define NF 20 /* length of final format string */
 #define CUT 60 /* check length of line */
 	void
